--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,10 @@
 {
   "printWidth": 140,
-  "bracketSpacing": false,
+  "singleQuote": false,
+  "jsxSingleQuote": true,
+  "semi": true,
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "arrowParens": "always",
   "trailingComma": "none"
 }
