--- a/package.json
+++ b/package.json
@@ -1,83 +1,99 @@
 {
   "name": "tsed-jwt-example",
   "version": "1.0.0",
+  "description": "",
   "scripts": {
-    "build": "yarn tsc",
-    "tsc": "tsc --project tsconfig.compile.json",
-    "tsc:w": "tsc --project tsconfig.json -w",
-    "start": "nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node src/index.ts",
+    "build": "yarn run barrels && yarn run tsc --project tsconfig.compile.json",
+    "barrels": "barrelsby --config .barrelsby.json",
+    "start": "yarn run barrels && tsnd --inspect --ignore-watch node_modules --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
     "start:prod": "cross-env NODE_ENV=production node dist/index.js",
-    "test": "yarn test:lint && yarn test:coverage",
+    "test": "yarn run test:lint && yarn run test:coverage",
     "test:unit": "cross-env NODE_ENV=test jest",
-    "test:coverage": "yarn test:unit",
-    "test:lint": "eslint src --ext .ts",
-    "test:lint:fix": "eslint src --ext .ts --fix",
-    "prettier": "prettier '{src,test}/**/*.ts' --write"
+    "test:coverage": "yarn run test:unit",
+    "test:lint": "eslint '**/*.{ts,js}'",
+    "test:lint:fix": "eslint '**/*.{ts,js}' --fix",
+    "prettier": "prettier '**/*.{ts,js,json,md,yml,yaml}' --write",
+    "prepare": "is-ci || husky install"
   },
   "dependencies": {
-    "@tsed/ajv": "5.57.0",
-    "@tsed/common": "5.57.0",
-    "@tsed/core": "5.57.0",
-    "@tsed/di": "5.57.0",
-    "@tsed/platform-express": "5.57.0",
-    "@tsed/passport": "5.57.0",
-    "@tsed/swagger": "5.57.0",
-    "@tsed/exceptions": "5.57.0",
-    "ajv": "6.12.2",
-    "body-parser": "1.19.0",
-    "compression": "1.7.4",
-    "concurrently": "5.2.0",
-    "cookie-parser": "1.4.5",
-    "cors": "2.8.5",
-    "cross-env": "7.0.2",
-    "express": "4.17.1",
+    "@tsed/ajv": "^6.114.2",
+    "@tsed/common": "^6.114.2",
+    "@tsed/core": "^6.114.2",
+    "@tsed/di": "^6.114.2",
+    "@tsed/engines": "^6.114.2",
+    "@tsed/exceptions": "^6.114.2",
+    "@tsed/json-mapper": "^6.114.2",
+    "@tsed/logger": "^6.1.1",
+    "@tsed/logger-file": "^6.1.1",
+    "@tsed/passport": "^6.114.2",
+    "@tsed/platform-cache": "^6.114.2",
+    "@tsed/platform-exceptions": "^6.114.2",
+    "@tsed/platform-express": "^6.114.2",
+    "@tsed/platform-log-middleware": "^6.114.2",
+    "@tsed/platform-middlewares": "^6.114.2",
+    "@tsed/platform-params": "^6.114.2",
+    "@tsed/platform-response-filter": "^6.114.2",
+    "@tsed/platform-views": "^6.114.2",
+    "@tsed/schema": "^6.114.2",
+    "@tsed/swagger": "^6.114.2",
+    "ajv": "^8.11.0",
+    "barrelsby": "^2.3.4",
+    "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.0",
+    "dotenv-expand": "^8.0.3",
+    "dotenv-flow": "^3.2.0",
+    "express": "^4.18.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "method-override": "3.0.0",
-    "passport": "0.4.1",
-    "passport-jwt": "4.0.0",
-    "passport-local": "1.0.0"
+    "lodash": "^4.17.21",
+    "method-override": "^3.0.0",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
-    "@tsed/cli-plugin-eslint": "1.13.5",
-    "@tsed/cli-plugin-jest": "1.13.5",
-    "@tsed/cli-plugin-passport": "1.13.5",
-    "@types/compression": "1.7.0",
-    "@types/cookie-parser": "1.4.2",
-    "@types/cors": "2.8.6",
-    "@types/express": "4.17.6",
-    "@types/jest": "25.2.3",
-    "@types/lodash": "^4.14.155",
-    "@types/method-override": "0.0.31",
-    "@types/node": "14.0.9",
-    "@types/passport": "1.0.3",
-    "@types/passport-jwt": "^3.0.3",
-    "@types/passport-local": "^1.0.33",
-    "@types/supertest": "2.0.9",
-    "@typescript-eslint/eslint-plugin": "3.1.0",
-    "@typescript-eslint/parser": "3.1.0",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/swagger-schema-official": "2.0.20",
-    "concurrently": "5.2.0",
-    "eslint": "7.1.0",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-prettier": "3.1.3",
-    "husky": "4.2.5",
-    "jest": "26.0.1",
-    "lint-staged": "10.2.8",
-    "nodemon": "2.0.4",
-    "prettier": "2.0.5",
-    "supertest": "4.0.2",
-    "ts-jest": "26.1.0",
-    "ts-node": "8.10.2",
-    "typescript": "3.9.3"
+    "@tsed/cli-plugin-eslint": "3.20.8",
+    "@tsed/cli-plugin-jest": "3.20.8",
+    "@tsed/cli-plugin-mongoose": "3.20.8",
+    "@tsed/cli-plugin-passport": "3.20.8",
+    "@tsed/testing-mongoose": "^6.114.2",
+    "@types/compression": "^1.7.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
+    "@types/method-override": "^0.0.32",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^17.0.27",
+    "@types/passport": "^1.0.7",
+    "@types/passport-local": "^1.0.34",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "@types/lodash": "^4.14.182",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "is-ci": "^3.0.1",
+    "jest": "^28.0.1",
+    "lint-staged": "^12.4.0",
+    "prettier": "^2.6.2",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.14.1",
+    "tslib": "^2.4.0",
+    "typescript": "^4.6.3"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "post-commit": "git update-index --again"
-    }
-  },
-  "readme": "ERROR: No README data found!",
-  "_id": "tsed-jwt-example@1.0.0"
+  "tsed": {
+    "packageManager": "yarn",
+    "convention": "default",
+    "architecture": "default"
+  }
 }
