--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "module": "commonjs",
-    "target": "es2016",
+    "target": "esnext",
     "sourceMap": true,
     "declaration": false,
     "experimentalDecorators": true,
@@ -17,19 +18,17 @@
     "importHelpers": true,
     "newLine": "LF",
     "noEmit": true,
+    "esModuleInterop": true,
     "resolveJsonModule": true,
     "lib": [
       "es7",
       "dom",
-      "esnext.asynciterable"
+      "ESNext.AsyncIterable"
     ],
     "typeRoots": [
       "./node_modules/@types"
     ]
   },
-  "include": [
-    "./src/**/*.ts"
-  ],
   "exclude": [
     "node_modules",
     "./public",
