--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "yarn run test:lint && yarn run test:coverage",
     "test:unit": "cross-env NODE_ENV=test jest",
     "test:coverage": "yarn run test:unit",
-    "test:lint": "eslint '**/*.{ts,js}'",
-    "test:lint:fix": "eslint '**/*.{ts,js}' --fix",
+    "test:lint": "eslint 'src/**/*.{ts,js}'",
+    "test:lint:fix": "eslint 'src/**/*.{ts,js}' --fix",
     "prettier": "prettier '**/*.{ts,js,json,md,yml,yaml}' --write",
     "prepare": "is-ci || husky install"
   },
@@ -84,7 +84,7 @@
     "lint-staged": "^12.4.0",
     "prettier": "^2.6.2",
     "supertest": "^6.2.2",
-    "ts-jest": "^27.1.4",
+    "ts-jest": "^28.0.3",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.14.1",
